New copy changes and such.

--- a/views/index.haml
+++ b/views/index.haml
@@ -17,37 +17,32 @@
     %li.slide15
     %li.slide16
     %li.slide17
-    %li.slide18
-    %li.slide19
-    %li.slide20
 
 .about.container
   .casual-intro
     %p
       %span
-        Hello
-      and thanks for visiting!! I&rsquo;m a web designer and developer&mdash;what some might call a designerd. I spend most of my time coding user interfaces and handing off compliant and pixel-perfect templates for engineers to flesh out with backend functionality. Sometimes I get to create beautiful designs prior to implementing them and sometimes I do logo and branding work that require no coding at all. Whatever the case is, the goal is to create an awesome web experience.
+        Work.
+      For some time now, I’ve been working closely with engineers, first as a Front-end Engineer and Designer, and more recently as a Tech Lead and Engineering Manager. I’ve spent the past 5 years working at a startup, where I joined as employee #3 (they've since raised several rounds and are at 135+ employees).
     %p
-      Outside of work, I&rsquo;m an introverted yet strongly opinionated nerd. Things I enjoy include interior design, Bea Arthur ice cream cone from Big Gay Ice Cream Shop in the East Village, my home-made Saturday morning waffles, and cuddling with my clingy cat Toby and my hyperactive dog Butters while binge watching TV shows with
+      When I’m coding, my goal is to implement user interfaces and to hand off compliant and pixel-perfect templates for engineers to flesh out with backend functionality. When I’m designing, my tools of choice are Photoshop and Invision. When recruiting, I spend time vetting engineers, conducting initial phone screens and in-house interviews&mdash;I then manage many of these new hires, including interns. As a tech lead, I focus on delivering features for our consumer facing web application, working closely with product managers and various stakeholders across the company.
+    %p
+      %span
+        Play.
+      I enjoy interior design, Bea Arthur ice cream cones from Big Gay Ice Cream Shop, home-made waffles, and cuddling with my clingy cat Toby and my hyperactive dog Butters while binge watching TV shows with
       %a(href="http://www.ianenders.com" target="_blank")
         Ian.
-      Things I dislikes include the entire winter and summer seasons, waking up early, and IPA's.
+      I dislike the entire winter and summer seasons, waking up early, and IPAs.
     %p
-      I studied music performance at Carnegie Mellon University, then took up wood working, began a masters in Design + Technology at Parsons, and now I design and code for a living and for fun. I keep busy and I get things done.
-    %p
-      Check out
-      %a(href="/portfolio")my portfolio
-      , and
+      I studied music performance at Carnegie Mellon University, then took up wood working, began a Masters in Design + Technology at Parsons, and now I lead and manage full-stack engineers. I keep busy and I get things done. Check out
       %a(href="/Ana_Enders_Resume.pdf" target="_blank") my resume
       to learn more about what I do.
-    %p.thanks
-      &#45; Cheers!!
 
   .resume
-    %h1 Front-end Developer
+    %h1 Engineering Manager
     .clear
     %summary
-      I am a website developer and designer. I’ve spent the past few years implementing web compliant sites using HTML, HAML, CSS, SASS, and JavaScript through JQuery and CoffeeScript. Due to my basic understanding of Object Oriented Programming and my personal interest in programming languages, such as Java, Ruby and Python, I feel comfortable manipulating code written by software engineers. All the while, I am a designer and creative at heart, which I express primarily through Photoshop. My design intuition and experience as a developer have made me particularly qualified to do site-wide QA testing on various platforms and operating systems. In short, I am the pixel-perfect attention-to-detail glue between the design and backend engineering teams using my skills to facilitate and contribute to both worlds.
+      I consider myself a generalist—shifting focus to whatever the business’ needs are, while being able to perform various critical roles in a fast paced environment. I split my day between managing ten people and being a team lead to our full-stack engineers. I establish code standards, perform code reviews, and I make sure the engineering team is a happy, highly functional, well-oiled machine.
 
     .category
       %span education
@@ -137,19 +132,15 @@
               .graph-header
               %label HAML
             .data
-              .intermediate.alt
-              .graph-header
-              %label JQuery
-            .data
-              .expert
+              .expert.alt
               .graph-header
               %label HTML
             .data
-              .intermediate.alt
+              .intermediate
               .graph-header
               %label CoffeeScript
             .data
-              .expert
+              .expert.alt
               .graph-header.dark
               %label SASS
           .clear.visible-xs
@@ -169,7 +160,7 @@
             .data
               .beginner
               .graph-header
-              %label MySQL &#38; PHP
+              %label MySQL
             .data
               .beginner.alt
               .graph-header
@@ -213,15 +204,15 @@
               %li beginner
           .additional
             %p
-              Additional Skills
+              Management
             .data
               .expert.alt
               .graph-header
-              %label Detail Oriented
+              %label Project Management
             .data
               .expert
               .graph-header.dark
-              %label Fluent Spanish
+              %label People Management
 
     .category
       %span experience
@@ -239,7 +230,7 @@
               .slide_inner
                 .parent-table
                   .table-row
-                    .table-header Senior Designer and Front-end Engineer
+                    .table-header Engineering Manager
                     .table-header Freelance Frontend Developer
                     .table-header Front-end Developer
                     .table-header Design Intern
@@ -256,11 +247,11 @@
                     .table-data.date
                       San Francisco, CA
                       .job
-                        Self Employed
+                        Self-Employed
                     .table-data.date
                       New York, NY
                       .job
-                        %a(href="http://intersectnyc.com" target="_blank")
+                        %a(href="https://www.razorfish.com/" target="_blank")
                           Intersect NYC (a.k.a. Crown Partners a.k.a. Razorfish)
                     .table-data.date
                       Brooklyn, NY
@@ -270,8 +261,7 @@
                     .table-data.date
                       New York, NY
                       .job
-                        %a(href="/")
-                          Self Employed
+                        Self-Employed
                     .table-data.date
                       Brooklyn, NY
                       .job
@@ -304,7 +294,7 @@
 
                   .table-row
                     .table-data
-                      As the Senior Front-end Engineer, I deliver Backbone HTML, SASS, and JavaScript via JQuery and CoffeeScript for our Python &#38; Tornado based app. I also provide designs from concept to implementation.
+                      Currently a team lead to full-stack engineers, establishing code standards, performing code reviews, coding, and managing. As a hiring manager, I've helped to recruit many of the engineers on the team. My strengths are in managing projects and people, and making sure everyone is happy and productive.
                     .table-data
                       Freelancing for old clients in need of front-end adjustments to their existing sites. Also worked on some logo and branding designs.
                     .table-data
@@ -319,14 +309,14 @@
       .category-container.visible-xs
         .parent-table
           .table-row
-            .table-header Senior Front-end Engineer
+            .table-header Engineering Manager
             .table-data.date
               New York, NY
               .job
                 %a(href="http://www.themuse.com/" target="_blank")
                   The Muse
             .table-data.date July 2012 - Present
-            .table-data As the Senior Front-end Engineer, I deliver Backbone HTML, SASS, and JavaScript via JQuery and CoffeeScript for our Python & Tornado based app. I also provide designs from concept to implementation.
+            .table-data Currently a team lead to full-stack engineers, establishing code standards, performing code reviews, coding, and managing. As a hiring manager, I've helped to recruit many of the engineers on the team. My strengths are in managing projects and people, and making sure everyone is happy and productive.
 
           .table-row
             .table-header Freelance Front-end Developer
@@ -394,18 +384,10 @@
             .table-data Responsible for managing content and editing product images through Photoshop for the company website. Office tasks included proofreading and editing written content for web and printed brochure. Assisted in the production of custom wood furniture making.
 
     .category.right
-      %span additional information
-      .clear
       .category-container
         .parent-table.contact-icons
           .table-data
             %img.btn(src="/images/about/btns/cmu.jpg" alt="cmu")/
-          .table-data
-            %a.email{:target => 'blank'}(href="mailto:ana.enders@gmail.com")
-          .table-data
-            %a.google{:target => 'blank'}(href="https://plus.google.com/101992801915803767157/posts")
-          .table-data
-            %a.rss(href="/feed.rss")
           .table-data
             %a.linkedIn{:target => 'blank'}(href="http://www.linkedin.com/in/anaenders")
           .table-data
