fixing single quote character

--- a/views/index.haml
+++ b/views/index.haml
@@ -23,9 +23,9 @@
     %p
       %span
         Work.
-      For some time now, I’ve been working closely with engineers, first as a Front-end Engineer and Designer, and more recently as a Tech Lead and Engineering Manager. I’ve spent the past 5 years working at a startup, where I joined as employee #3 (they've since raised several rounds and are at 135+ employees).
+      For some time now, I've been working closely with engineers, first as a Front-end Engineer and Designer, and more recently as a Tech Lead and Engineering Manager. I've spent the past 5 years working at a startup, where I joined as employee #3 (they've since raised several rounds and are at 135+ employees).
     %p
-      When I’m coding, my goal is to implement user interfaces and to hand off compliant and pixel-perfect templates for engineers to flesh out with backend functionality. When I’m designing, my tools of choice are Photoshop and Invision. When recruiting, I spend time vetting engineers, conducting initial phone screens and in-house interviews&mdash;I then manage many of these new hires, including interns. As a tech lead, I focus on delivering features for our consumer facing web application, working closely with product managers and various stakeholders across the company.
+      When I'm coding, my goal is to implement user interfaces and to hand off compliant and pixel-perfect templates for engineers to flesh out with backend functionality. When I'm designing, my tools of choice are Photoshop and Invision. When recruiting, I spend time vetting engineers, conducting initial phone screens and in-house interviews&mdash;I then manage many of these new hires, including interns. As a tech lead, I focus on delivering features for our consumer facing web application, working closely with product managers and various stakeholders across the company.
     %p
       %span
         Play.
@@ -42,7 +42,7 @@
     %h1 Engineering Manager
     .clear
     %summary
-      I consider myself a generalist—shifting focus to whatever the business’ needs are, while being able to perform various critical roles in a fast paced environment. I split my day between managing ten people and being a team lead to our full-stack engineers. I establish code standards, perform code reviews, and I make sure the engineering team is a happy, highly functional, well-oiled machine.
+      I consider myself a generalist&mdash;shifting focus to whatever the business' needs are, while being able to perform various critical roles in a fast paced environment. I split my day between managing ten people and being a team lead to our full-stack engineers. I establish code standards, perform code reviews, and I make sure the engineering team is a happy, highly functional, well-oiled machine.
 
     .category
       %span education
